--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <link rel="alternate" type="application/atom+xml" title="Coding...Coding..." href="/atom.xml">
     
     <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="stylesheet" href="//unpkg.com/hexo-theme-material-indigo@latest/css/style.css">
+    <link rel="stylesheet" href="/css/style.css?v=1.7.0">
     <script>window.lazyScripts=[]</script>
 
     <!-- custom head -->
@@ -436,7 +436,7 @@ var BLOG = { ROOT: '/', SHARE: true, REWARD: false };
 
 </script>
 
-<script src="//unpkg.com/hexo-theme-material-indigo@latest/js/main.min.js"></script>
+<script src="/js/main.min.js?v=1.7.0"></script>
 
 
 <div class="search-panel" id="search-panel">
@@ -456,7 +456,7 @@ var BLOG = { ROOT: '/', SHARE: true, REWARD: false };
 </li>
 </template>
 
-<script src="//unpkg.com/hexo-theme-material-indigo@latest/js/search.min.js" async></script>
+<script src="/js/search.min.js?v=1.7.0" async></script>
 
 
 
@@ -472,10 +472,10 @@ var BLOG = { ROOT: '/', SHARE: true, REWARD: false };
     var OriginTitile = document.title, titleTime;
     document.addEventListener('visibilitychange', function() {
         if (document.hidden) {
-            document.title = '死鬼去哪里了！';
+            document.title = 'Miss You~';
             clearTimeout(titleTime);
         } else {
-            document.title = '(つェ⊂)咦!又好了!';
+            document.title = '欢迎交流~';
             titleTime = setTimeout(function() {
                 document.title = OriginTitile;
             },2000);
