--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
             </li>
         
             <li class="waves-block waves-effect">
+              <a href="/tags"  >
+                <i class="icon icon-lg icon-tags"></i>
+                Tags
+              </a>
+            </li>
+        
+            <li class="waves-block waves-effect">
               <a href="/categories"  >
                 <i class="icon icon-lg icon-th-list"></i>
                 分类
@@ -472,10 +479,10 @@ var BLOG = { ROOT: '/', SHARE: true, REWARD: false };
     var OriginTitile = document.title, titleTime;
     document.addEventListener('visibilitychange', function() {
         if (document.hidden) {
-            document.title = 'Miss You~';
+            document.title = '死鬼去哪里了！';
             clearTimeout(titleTime);
         } else {
-            document.title = '欢迎交流~';
+            document.title = '(つェ⊂)咦!又好了!';
             titleTime = setTimeout(function() {
                 document.title = OriginTitile;
             },2000);
