--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ hexo的next主题个性化教程:打造炫酷网站
 另外附上大致的使用GitHub Pages建站的流程:
 
 注册GitHub账号
-创建 YourName.github.io库,GitHub默认把它当做静态html托管页
+创建 YourName.github.io库,GitHub默认把它当做静态html托管仓
           ...
           <!--noindex-->
           <div class="post-button text-center">
